Fixing the whole crate, rewriting the to_c_str() returning a CString

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ unstable = [] # in case of nightly build
 
 [dependencies]
 libc = "*"
-bitflags = "*"
+bitflags = ">=0.9"
 
 [dependencies.libucl-sys]
-path = "libucl-sys"
+path = "../libucl-sys"
 version = "*"
